--- a/VentasWeb/VentasWeb/Views/Shared/_Layout.cshtml
+++ b/VentasWeb/VentasWeb/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark" style="font-weight: bold; background-color:black;" >
+    <nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark" style="font-weight: bold; background-color:black;">
         <a class="navbar-brand" href="#" style="background-color: black;">
             <img src="@Url.Content("~/Imagenes/tiendalogo.png")" width="85" height="85" alt="logo">
         </a>
@@ -26,17 +26,17 @@
         </button>
         <div class="collapse navbar-collapse" style="background-color: black;" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto" style="background-color: black;">
-                <li class="nav-item"  style="background-color: black;">
+                <li class="nav-item" style="background-color: black;">
                     <a class="nav-link" name="Home" href="@Url.Action("Index", "Home")"><i class="fas fa-home"></i> Inicio</a>
                 </li>
                 @Html.ActionLinkAllow()
-        
+
             </ul>
-            <ul class="nav navbar-nav ml-auto"  style="background-color: black;">
-                
-                <li class="nav-item"  style="background-color: black;">
+            <ul class="nav navbar-nav ml-auto" style="background-color: black;">
+
+                <li class="nav-item" style="background-color: black;">
                     <a href="@Url.Action("Salir", "Home")" class="nav-link">
-                        <i class="fas fa-sign-out-alt"  style="background-color: black;"></i>
+                        <i class="fas fa-sign-out-alt" style="background-color: black;"></i>
                         <span>
                             <strong>Salir</strong>
                         </span>
@@ -53,6 +53,7 @@
             <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
         </footer>
     </div>
+
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
@@ -147,10 +148,10 @@
                 if ($(li).find("div.dropdown-menu").length != 0) {
 
                     var div = $($(li).find("div.dropdown-menu"))
-                   
+
                     div.find("a.dropdown-item").each(function (x, tagA) {
                         if ($(tagA).attr("name") == menuactivo) {
-                            
+
                             $(li).addClass("active");
                             return false;
                         }
@@ -169,5 +170,7 @@
 
     </script>
     @RenderSection("scripts", required: false)
-</bodybackground-color:>
+    </bodybackground-color:>
+
+</body>
 </html>
